--- a/package.json
+++ b/package.json
@@ -9,13 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.2",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@tanstack/react-query": "^5.17.19",
+    "@types/styled-components": "^5.1.34",
+    "expo": "^50.0.0",
+    "expo-asset": "~9.0.2",
+    "expo-blur": "~12.9.1",
+    "expo-font": "~11.10.2",
+    "expo-splash-screen": "~0.26.3",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.73.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-web-swiper": "^2.2.4",
+    "styled-components": "^6.1.8",
+    "expo-linear-gradient": "~12.7.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@tsconfig/react-native": "^3.0.3",
+    "@types/jest": "^29.5.11",
+    "@types/react": "^18.2.48",
+    "@types/react-test-renderer": "^18.0.7",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
